// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests in GifGrid should match snapshot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    death
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`tests in GifGrid should show items when useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    death
     
  </h3>
  <div
    className="card-grid"
  />
</Fragment>
`;
